--- a/Vilarim.POC.YouTube.Test/Vilarim.POC.YouTube.Test.csproj
+++ b/Vilarim.POC.YouTube.Test/Vilarim.POC.YouTube.Test.csproj
@@ -6,9 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
   <PropertyGroup>
